# advent-of-code-2025

day-1/: Makefile  pyproject.toml
day-1/src/: part_1.py  part_2.py
day-1/tests/: test_part_1.py  test_part_2.py
day-10/: pyproject.toml
day-10/src/: part_1.py  part_2.py
day-11/: Makefile  pyproject.toml
day-11/src/: part_1.py  part_2.py
day-12/: Makefile  pyproject.toml
day-12/src/: part_1.py
day-2/: pyproject.toml
day-2/src/: part_1.py  part_2.py
day-2/tests/: test_part_1.py
day-3/: pyproject.toml
day-3/src/: part_1.py  part_2.py
day-3/tests/: test_part_2.py
day-4/: pyproject.toml
day-4/src/: part_1.py  part_2.py
day-4/tests/: test_part_1.py
day-5/: Makefile  pyproject.toml
day-5/src/: part_1.py  part_2.py
day-6/src/: part_1.py  part_2.py
day-7/: pyproject.toml
day-7/src/: part_1.py  part_2.py
day-8/: pyproject.toml
day-8/src/: part_1.py  part_2.py
day-9/: pyproject.toml
day-9/src/: part_1.py  part_2.py
day-9/tests/: test_part_2.py
