[project]
name = "day-9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
